@@ -3,8 +3,12 @@ package com.rogers.rmcdouga.fitg.svgviewer.images;
 import java.awt.Image;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.EnumMap;
+import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.imageio.ImageIO;
 
@@ -17,10 +21,18 @@ import com.rogers.rmcdouga.fitg.basegame.units.RebelMilitaryUnit;
 
 public class ClassPathImageStore implements ImageStore {
 
-	private static final Path IMAGE_PATH = Paths.get("images");
+
+	private static final Path IMAGE_PATH = Path.of("images");
+	private static final String IMAGE_EXTENSION = ".png";
 	
-	private static final Path LOYALTY_IMAGE_FILENAME = Paths.get("Marker_Loyalty.png");
-	private static final Path MAP_IMAGE_FILENAME = Paths.get("FITGMAP.jpg");
+	private static final Path LOYALTY_IMAGE_FILENAME = Path.of("Marker_Loyalty.png");
+	private static final Path MAP_IMAGE_FILENAME = Path.of("FITGMAP.jpg");
+
+	private static final Map<BaseGameCharacter, Path> characterMap = initImageMap(BaseGameCharacter.class, ClassPathImageStore::genCharacterName);
+	private static final Map<ImperialMilitaryUnit, Path> imperialUnitMap = initImageMap(ImperialMilitaryUnit.class, u->"Imperial_" + u + IMAGE_EXTENSION);
+	private static final Map<RebelMilitaryUnit, Path> rebelUnitMap = initImageMap(RebelMilitaryUnit.class, u->"Rebel_" + u + IMAGE_EXTENSION);
+	private static final Map<BaseGameImperialSpaceship, Path> imperialSpaceshipMap = initImageMap(BaseGameImperialSpaceship.class, u->"ImperialShip_" + u + IMAGE_EXTENSION);
+	private static final Map<BaseGameRebelSpaceship, Path> rebelSpaceshipMap = initImageMap(BaseGameRebelSpaceship.class, u->"RebelShip_" + u + IMAGE_EXTENSION);
 
 	private static Path imagePath(Path filename) {
 		return IMAGE_PATH.resolve(filename);
@@ -46,52 +58,52 @@ public class ClassPathImageStore implements ImageStore {
 
 	@Override
 	public Image getImage(BaseGameCharacter character) {
-		throw new UnsupportedOperationException("Not implemented yet!");
+		return readImage(characterMap.get(character));
 	}
 
 	@Override
 	public Path getImagePath(BaseGameCharacter character) {
-		throw new UnsupportedOperationException("Not implemented yet!");		
+		return imagePath(characterMap.get(character));
 	}
 
 	@Override
 	public Image getImage(BaseGameImperialSpaceship spaceship) {
-		throw new UnsupportedOperationException("Not implemented yet!");
+		return readImage(imperialSpaceshipMap.get(spaceship));
 	}
 
 	@Override
 	public Path getImagePath(BaseGameImperialSpaceship spaceship) {
-		throw new UnsupportedOperationException("Not implemented yet!");		
+		return imagePath(imperialSpaceshipMap.get(spaceship));
 	}
 
 	@Override
 	public Image getImage(BaseGameRebelSpaceship spaceship) {
-		throw new UnsupportedOperationException("Not implemented yet!");
+		return readImage(rebelSpaceshipMap.get(spaceship));
 	}
 
 	@Override
 	public Path getImagePath(BaseGameRebelSpaceship spaceship) {
-		throw new UnsupportedOperationException("Not implemented yet!");		
+		return imagePath(rebelSpaceshipMap.get(spaceship));
 	}
 
 	@Override
 	public Image getImage(RebelMilitaryUnit unit) {
-		throw new UnsupportedOperationException("Not implemented yet!");
+		return readImage(rebelUnitMap.get(unit));
 	}
 
 	@Override
 	public Path getImagePath(RebelMilitaryUnit unit) {
-		throw new UnsupportedOperationException("Not implemented yet!");		
+		return imagePath(rebelUnitMap.get(unit));
 	}
 
 	@Override
 	public Image getImage(ImperialMilitaryUnit unit) {
-		throw new UnsupportedOperationException("Not implemented yet!");
+		return readImage(imperialUnitMap.get(unit));
 	}
 
 	@Override
 	public Path getImagePath(ImperialMilitaryUnit unit) {
-		throw new UnsupportedOperationException("Not implemented yet!");		
+		return imagePath(imperialUnitMap.get(unit));
 	}
 
 	@Override
@@ -114,4 +126,22 @@ public class ClassPathImageStore implements ImageStore {
 		return imagePath(MAP_IMAGE_FILENAME);
 	}
 
+	private static String genCharacterName(BaseGameCharacter character) {
+		String prefix = switch(character.allegience()) {
+			case REBEL -> "RebelChar_";
+			case IMPERIAL -> "ImperialChar_";
+			default -> throw new IllegalStateException("Unexpected allegience (" + character.allegience().toString() + ") for character '" + character.toString() + "'.");
+		};
+		return prefix + character.toString() + IMAGE_EXTENSION;
+	}
+
+	private static <T extends Enum<T>> Map<T, Path> initImageMap(Class<T> clazz, Function<T, String> nameMapper) {
+		return Stream.of(clazz.getEnumConstants()).collect(Collectors.toMap(Function.identity(), 		// Loop through all the enums inserting the enum as the key
+																	 v->Path.of(nameMapper.apply(v)), 	// Map the enum to a name and use that name as the value
+																	 (l, r) -> {						// Throw an exceptiom if we hit a duplicate (shouldn't happen) 
+																		 		throw new IllegalArgumentException("Duplicate keys " + l + "and " + r + ".");
+																	 			}, 
+																	 ()->new EnumMap<T, Path>(clazz)));	// Store in an EnumMap for efficiency
+		
+	}
 }
